<resources>
    <string name="app_name">Península de Santa Elena</string>
    <string name="action_settings">Settings</string>
    <string name="nombre_punto">1. Nombre punto</string>
    <string name="descripcion_punto"></string>
    <string name="ver_mas"><u>Ver más</u></string>
    <string name="aviso_ver_mas">¡Lo sentimos!</string>
    <string name="aviso_texto">Necesitas estar cerca del punto de interés para poder acceder a más información</string>
    <string name="aviso_texto_website">Necesitas estar cerca del punto de interés para poder acceder a más información, puede acceder a más contenido visitando nuestro sitio web.</string>
    <string name="aviso_aceptar">Aceptar</string>
    <string name="aviso_reintentar">Regresar</string>
    <string name="aviso_visitar_website">Visitar sitio web</string>


    <string name="No_multimedia">No existe datos multimedia para este sitio!</string>
    <string name="error_audio">Ha ocurrido un error, inténtelo nuevamente!</string>
    <string name="pagina_web">Ir a sitio web</string>
    <string name="sobre_nosotros">Sobre nosotros</string>
    <string name="ver_recomendaciones">Seguridad</string>
    <string name="info_aplicacion">Este  producto  ha  sido  desarrollado  por  medio  de  la  cooperación  del  Centro  de  Investigación  en Ciencias Geológicas, museo+UCR, Escuela de Ciencias de la Computación e Informática y el Área de Conservación Guanacaste, con el fin de educar sobre el conocimiento geológico del noroeste de Costa Rica, que constituye uno de los sitios más emblemáticos y enmarca la historia geológica de la parte Sur de América Central. Es así como la Universidad de Costa Rica y el Ministerio de Ambiente y Energía se unen para promover la cultura científica a través de paisajes geológicos de una belleza y geodiversidad magnificente.</string>
    <string name="creditos">Créditos</string>


    <string name="CICG">Centro de Investigación en Ciencias Geológicas(CICG)</string>
    <string name="museo">museo+UCR</string>
    <string name="ACG">Área de Conservación Guanacaste (ACG)</string>
    <string name="ECCI">Escuela de Ciencias de la Computación e Informática (ECCI)</string>

    <string name="integrantesCICG">Percy Denyer Chavarría\nJuan Pablo Solano Monge</string>
    <string name="integrantesMuseo">Eugenia Zavaleta Ochoa\nMariano Chinchilla Chavarría\nMarco Díaz Segura</string>
    <string name="integrantesACG">Alejandro Masís Cuevillas\nRóger Blanco Segura\nMaría Marta Chavarría Díaz\nFelipe Chavarría Díaz</string>
    <string name="Eniacs">ENIACS UCR</string>
    <string name="integrantes">Integrado por:</string>
    <string name="integrantesECCI">Francisco Arroyo Solano\nKenneth Calvo Argüello\nDavid Chaves Campos\nJohan Durán Cerdas\nYohel Muñoz Rodríguez\nMarcelo Solórzano Astorga\nCésar Vargas Arce</string>
    <string name="profesor">Alan Calderón Castro</string>
    <string name="anno">© UCR 2017</string>
    <string name="vocActivity">Glosario</string>
    <string name="glosario">Glosario</string>
    <string name="lista_vacia">No se encuentran audios.</string>‘
</resources>
