...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.eniacs_team.rutamurcielago.VocPlayerActivity">

    <!-- Player Header -->
    <LinearLayout
        android:id="@+id/player_header_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/naranja_light"
        android:layout_alignParentTop="true"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">
...
            android:text="@string/lista_vacia"
            android:textSize="16sp"
            android:textStyle="bold" />

        <!-- Playlist button -->
        <ImageButton
            android:id="@+id/btnPlaylist"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:src="@drawable/btn_playlist"
            android:background="@null"/>
    </LinearLayout>

...
